package com.calmperson.goalachievementtree.ui

object TestTag {
    const val CREATE_NEW_GOAL_BUTTON = "CNGB"
    const val ENTER_YOUR_GOAL = "EYG"
    const val ENTER_STEP = "ES"
    const val GOAL = "GOAL"
    const val ACHIEVED_GOAL_MARK = "AGM"
    const val DELETE_GOAL_BUTTON = "DGB"
    const val STEPS_LIST = "SL"
    const val STEP_CONTAINER = "SC"
    const val CONGRATULATION_DIALOG = "CD"
    const val TREE = "TREE"
}